--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <div class="card container">
         <div class="row">
             <div class="col-xs-12 col-sm-2">
-                <img src="images/rezwan.jpg" alt="Mervyn" class="img-circle img-thumbnail img-responsive">
+                <img src="images/profile.jpg" alt="Mervyn" class="img-circle img-thumbnail img-responsive">
             </div>
             <div class="col-xs-12 col-sm-10">
-                <p class="name">Md. Rezwanul Haque</p>
+                <p class="name">Md. Sakif Rahman</p>
                 <br />
                 <ul class="list-unstyled">
                     <li><i class="fa fa-location-arrow fa-fw" aria-hidden="true"></i> Khulna, Bangladesh</li>
