--- a/index.html
+++ b/index.html
@@ -31,23 +31,22 @@
                 <br />
                 <ul class="list-unstyled">
                     <li><i class="fa fa-location-arrow fa-fw" aria-hidden="true"></i> Khulna, Bangladesh</li>
-                    <li><i class="fa fa-birthday-cake fa-fw" aria-hidden="true"></i> 25 July 1996</li>
-                    <li><i class="fa fa-mobile fa-fw" aria-hidden="true"></i> +8801773254014</li>
-                    <li><a href="mailto:haque1407028@stud.kuet.ac.bd" style="color: #415958"><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i> haque1407028@stud.kuet.ac.bd</a>
-                    <li><a href="mailto:rezwanh001@gmail.com" style="color: #415958"><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i> rezwanh001@gmail.com</a>
-                    <li><a href="mailto:r.haque.249.rh@gmail.com" style="color: #696969"><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i> r.haque.249.rh@gmail.com</a>
+                    <li><i class="fa fa-birthday-cake fa-fw" aria-hidden="true"></i> 20 December 1997</li>
+                    <li><i class="fa fa-mobile fa-fw" aria-hidden="true"></i> +8801750054343</li>
+                    <li><a href="mailto:rahman1407023@stud.kuet.ac.bd" style="color: #415958"><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i> rahman1407023@stud.kuet.ac.bd</a>
+                    <li><a href="mailto:sakif1407023@gmail.com" style="color: #415958"><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i> sakif1407023@gmail.com</a>
                     </li>
                 </ul>
                 <ul class="list-inline">
-                    <li><a href="https://github.com/rezwanh001/" target="_blank"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
+                    <li><a href="https://github.com/Sakifneoworld" target="_blank"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
                     </li>
-                    <li><a href="https://stackoverflow.com/users/5424617/md-rezwanul-haque" target="_blank"><i class="fa fa-stack-overflow fa-lg" aria-hidden="true"></i></a>
-                    </li>
-
-                    <li><a href="https://www.kaggle.com/rezwan249" target="_blank"><i class="fa fa-font fa-lg" aria-hidden="true" ></i></a>
+                    <li><a href="https://stackoverflow.com/users/5424617/md-rezwanul-haque" target="_blank"><i class="fab fa-youtube" aria-hidden="true"></i></a>
                     </li>
 
-                    <li><a href="https://www.linkedin.com/in/md-rezwanul-haque-2b311a11a/" target="_blank"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i></a>
+                    <li><a href="https://www.kaggle.com/sakif1407023" target="_blank"><i class="fa fa-font fa-lg" aria-hidden="true" ></i></a>
+                    </li>
+
+                    <li><a href="https://www.linkedin.com/in/sakif-rahman-096224159/" target="_blank"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i></a>
                     </li>
 
 
