--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 
                     <li><a href="https://www.linkedin.com/in/sakif-rahman-096224159/" target="_blank"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i></a>
                     </li>
+                 
+                    <li><a href="https://www.facebook.com/sakif.rahmanrabib" target="_blank"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
+                    </li>
 
 
                    <!--  <li><a href="https://twitter.com/249Rh" target="_blank"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
