--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <li><a href="https://www.facebook.com/sakif.rahmanrabib" target="_blank"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
                     </li>
                  
-                   <li><a href="https://www.facebook.com/sakif.rahmanrabib" target="_blank"><i class="fa fa-youtube fa-lg" aria-hidden="true"></i></a>
+                   <li><a href="https://www.youtube.com/channel/UCwY2uuYbPRXX_iqO2DFDjgg" target="_blank"><i class="fa fa-youtube fa-lg" aria-hidden="true"></i></a>
                     </li>
 
 
@@ -69,9 +69,9 @@
                     
                 </ul>
                 <hr>
-                <p class="tag">Problem solver | Self-motivated | Self-discipline | Enthusiastic | Creative</p>
+                <p class="tag">Problem solver | Self-motivated | Game Developer | Machene Learner </p>
                 <br>
-                <p class="text-justify">I am studying B.Sc in Computer Science and Engineering (CSE) at Khulna University of Engineering and Technology (KUET), Khulna, Bangladesh. I am working on Machine Learning(ML), Deep Learning(DL), Deep Reinforcement Learning(DRL) and interested in Artificial Intelligence(AI).</p>
+                <p class="text-justify">I am studying B.Sc in Computer Science and Engineering (CSE) at Khulna University of Engineering and Technology (KUET), Khulna, Bangladesh. I am working on Machine Learning(ML), Deep Learning(DL), Image Processing and interested in Artificial Intelligence(AI).</p>
             </div>
         </div>
     </div>
