--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 
                                 <div class="cd-timeline-content">
                                     <h2>Higher Secondary Certificate (H.S.C)</h2>
-                                    <p><i class="fa fa-university fa-lg" aria-hidden="true"></i> <a href="http://rgcc.ac.bd/" target="_blank">Rajshahi Govt. City College</a>, Rajshahi, Bangladesh</p>
+                                    <p><i class="fa fa-university fa-lg" aria-hidden="true"></i> <a href="http://www.dgc.edu.bd/" target="_blank">Dinajpur Govt. College</a>, Dinajpur, Bangladesh</p>
                                     <hr />
                                     <ul class="list-unstyled">
                                         <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> GPA: 5.00</li>
@@ -321,10 +321,10 @@
 
                                 <div class="cd-timeline-content">
                                     <h2>Secondary School Certificate (S.S.C)</h2>
-                                    <p><i class="fa fa-university fa-lg" aria-hidden="true"></i> <a href="https://www.facebook.com/Balaharhighschool/" target="_blank">Balahar High School</a>, Dinajpur, Bangladesh</p>
+                                    <p><i class="fa fa-university fa-lg" aria-hidden="true"></i> <a href="http://www.dinajpurzillaschool.edu.bd/" target="_blank">Dinajpur Zilla School</a>, Dinajpur, Bangladesh</p>
                                     <hr />
                                     <ul class="list-unstyled">
-                                        <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> GPA: 5.00</li>
+                                        <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> GPA: 4.98</li>
                                         <!-- <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i><a href="images/taichi.jpg" image="true" link="" rel="popover" caption="Tai Chi" title="1st runner up" data-img="images/taichi.jpg">
                                                 Wushu Tai Chi</a>
                                         </li> -->
@@ -339,7 +339,7 @@
                         </section>
                     </div>
 
-
+<!--
                     <div role="tabpanel" class="tab-pane fade" id="skills">
                         <div class="row">
                             <div class="col-xs-12 col-sm-3">
@@ -427,7 +427,7 @@
                             </div>
                         </div>
                     </div>
-
+-->
                     <!-- ####################### PROJECTS ######################### -->
                     <div role="tabpanel" class="tab-pane fade" id="projects">
                         <section id="cd-timeline">
