--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                         </section>
                     </div>
 
-<!--
+
                     <div role="tabpanel" class="tab-pane fade" id="skills">
                         <div class="row">
                             <div class="col-xs-12 col-sm-3">
@@ -375,6 +375,7 @@
                                        Python, R</a>,
                                         <a href="images/Bookstore.PNG" image="true" link="" rel="popover" caption="Book Store Website" title="Book Store Website" data-img="images/Bookstore.PNG">
                                        PHP</a>, JavaScript -->
+     <!--
                                     </li>
                                     <li style="list-style-type: circle;">HTML, CSS</li>
                                     <!-- <li style="list-style-type: circle;">Bootstrap, jQuery, AngularJS, ReactJS, Redux, Django, Django REST, Play Framework</li> -->
@@ -427,7 +428,6 @@
                             </div>
                         </div>
                     </div>
--->
                     <!-- ####################### PROJECTS ######################### -->
                     <div role="tabpanel" class="tab-pane fade" id="projects">
                         <section id="cd-timeline">
@@ -439,19 +439,20 @@
                               </div>
 
                               <div class="cd-timeline-content">
-                                  <a href="https://github.com/rezwanh001/Deep-Neural-Network-for-Image-Classification-Cat-Non-Cat" target="_blank"><h2 style="color:#337ab7">Deep Neural Network for Image Classification Cat vs Non-Cat</h2><small>Link to source code.</small></a>
-                                  <h5>This project is on Cat Classification Project with Deep Neural Network.</h5>
+                                  <a href="https://github.com/Sakifneoworld/Self-Driving-Car-with-python-and-Unity" target="_blank"><h2 style="color:#337ab7">Self Driving Car with Python and Unity</h2><small>Link to source code.</small></a>
+                                  <a href="https://www.youtube.com/watch?v=IxMG-jii1R8" target="_blank"><small>Link to video.</small></a>
+                                  <h5>An Image processing project. The game was made by Unity and The map is also made by Unity. The control was given by python with the help of image processing. </h5>
                                   <!-- <h5> 3rd Year Project</h5> -->
                                   <hr />
                                   <ul class="list-unstyled">
 
-                                      <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> Deep Neural Networks</li>
+                                      <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> Image Processing</li>
                                       <!-- <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> RNN decoder with LSTM</li> -->
                                       <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> Python3</li>
-                                      <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> Jupyter-notebook</li>
+                                      <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> Unity</li>
 
                                   </ul>
-                                  <span class="cd-date">April 2018</span>
+                                  <span class="cd-date">December 2017</span>
                               </div>
 
                           </div>
