--- a/index.html
+++ b/index.html
@@ -456,7 +456,29 @@
                               </div>
 
                           </div>
+                              <div class="cd-timeline-block">
+                              <div class="cd-timeline-img cd-grad">
+                                  <img src="images/cd-icon-task.png" alt="Grad">
+                              </div>
 
+                              <div class="cd-timeline-content">
+                                  <a href="https://github.com/Sakifneoworld/Google-s-Dinosaur-Bot-with-Python" target="_blank"><h2 style="color:#337ab7">Google-s Dinosaur Bot with Python</h2><small>Link to source code.</small></a>
+                                  <a href="https://www.youtube.com/playlist?list=PLHd9cshv6jTU7ya3KDsxqain7PKNZBCsk" target="_blank"><small>Link to this project Tutorial Video.</small></a>
+                                  <h5>The purpose of this project is to use Python to play Google's Dinosaur. We use Image Processing to make a bot. Also youtube tutorial video made for this project </h5>
+                                  <!-- <h5> 3rd Year Project</h5> -->
+                                  <hr />
+                                  <ul class="list-unstyled">
+
+                                      <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> Image Processing</li>
+                                      <!-- <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> RNN decoder with LSTM</li> -->
+                                      <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> Python3</li>
+                                      <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> Unity</li>
+
+                                  </ul>
+                                  <span class="cd-date">December 2017</span>
+                              </div>
+
+                          </div>
 
 
                           <div class="cd-timeline-block">
