--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- ####################### PROJECTS ######################### -->
+ <!-- ####################### PROJECTS ######################### -->
                     <div role="tabpanel" class="tab-pane fade" id="projects">
                         <section id="cd-timeline">
 
@@ -472,62 +472,38 @@
                                       <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> Image Processing</li>
                                       <!-- <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> RNN decoder with LSTM</li> -->
                                       <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> Python3</li>
-                                      <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> Unity</li>
+                                      <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> HTML</li>
 
                                   </ul>
                                   <span class="cd-date">December 2017</span>
                               </div>
 
                           </div>
-
-
-                          <div class="cd-timeline-block">
+                       <div class="cd-timeline-block">
                               <div class="cd-timeline-img cd-grad">
                                   <img src="images/cd-icon-task.png" alt="Grad">
                               </div>
 
                               <div class="cd-timeline-content">
-                                  <a href="https://github.com/rezwanh001/Image-Captioning-Project" target="_blank"><h2 style="color:#337ab7">Image Captioning Project</h2><small>Link to source code.</small></a>
-                                  <h5>Description for Real World Images.</h5>
+                                  <a href="https://github.com/Sakifneoworld/3D-Racing-Game-in-Unity-for-android-and-Windows" target="_blank"><h2 style="color:#337ab7">3D Racing Game in Unity for Android and Windows</h2><small>Link to source code.</small></a>
+                                  <a href="https://www.youtube.com/watch?v=xmvjs4ZpzsA&list=PLHd9cshv6jTVXpKo9Q0MFFWeKi-UQ5loJ" target="_blank"><small>Link to this project Tutorial Video.</small></a>
+                                  <h5>This project is a 3D racing game in Unity. This game can play on Single or multiple player. Also youtube tutorial video made for buid the game.</h5>
                                   <!-- <h5> 3rd Year Project</h5> -->
                                   <hr />
                                   <ul class="list-unstyled">
 
-                                      <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> CNN encoder with InceptionV3 model</li>
-                                      <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> RNN decoder with LSTM</li>
-                                      <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> Python3</li>
-                                      <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> Keras, TensorFlow, Matplotlib</li>
+                                      <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> Unity</li>
+                                      <!-- <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> RNN decoder with LSTM</li> -->
+                                      <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> C#</li>
+                                      <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> Visual Studio</li>
 
                                   </ul>
-                                  <span class="cd-date">April 2018</span>
+                                  <span class="cd-date">December 2016</span>
                               </div>
 
                           </div>
 
-
-
-                          <div class="cd-timeline-block">
-                              <div class="cd-timeline-img cd-grad">
-                                  <img src="images/cd-icon-task.png" alt="Grad">
-                              </div>
-
-                              <div class="cd-timeline-content">
-                                  <a href="https://github.com/rezwanh001/Road-Surface-and-Lane-Detection" target="_blank"><h2 style="color:#337ab7">Road Surface and Lane Detection</h2><small>Link to source code.</small></a>
-                                  <h5>In this project you will detect Road Surface and Lane Detection with OpenCV.</h5>
-                                  <!-- <h5> 3rd Year Project</h5> -->
-                                  <hr />
-                                  <ul class="list-unstyled">
-
-                                      <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> OpenCV</li>
-                                      <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> Image Processing</li>
-                                      <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> Python3</li>
-                                      <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> Jupyter Notebook</li>
-
-                                  </ul>
-                                  <span class="cd-date">2018</span>
-                              </div>
-
-                          </div>
+                          
 
 
 
