--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="card container">
         <div class="row">
             <div class="col-xs-12 col-sm-2">
-                <img src="images/profile.jpg" alt="Mervyn" class="img-circle img-thumbnail img-responsive">
+                <img src="images/profile2.JPG" alt="Mervyn" class="img-circle img-thumbnail img-responsive">
             </div>
             <div class="col-xs-12 col-sm-10">
                 <p class="name">Md. Sakif Rahman</p>
