--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p class="name">Md. Sakif Rahman</p>
                 <br />
                 <ul class="list-unstyled">
-                    <li><i class="fa fa-location-arrow fa-fw" aria-hidden="true"></i> Khulna, Bangladesh</li>
+                    <li><i class="fa fa-location-arrow fa-fw" aria-hidden="true"></i> Dinajpur, Bangladesh</li>
                     <li><i class="fa fa-birthday-cake fa-fw" aria-hidden="true"></i> 20 December 1997</li>
                     <li><i class="fa fa-mobile fa-fw" aria-hidden="true"></i> +8801750054343</li>
                     <li><a href="mailto:rahman1407023@stud.kuet.ac.bd" style="color: #415958"><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i> rahman1407023@stud.kuet.ac.bd</a>
@@ -110,7 +110,7 @@
                                   <p><i class="fa fa-map-marker" aria-hidden="true"></i> Khulna, Bangladesh</p>
 
                                   <hr />
-                                  <p>I am studying in B.Sc Computer Science &Engineering (CSE) at Khulna University of Engineering & Technology(KUET). I am active at problem solving with Python3, Java, C++. And I am learning different Algorithms for problem solve and developing my skills. Recently I am working on Artificial Intelligence(AI)</p>
+                                  <p>I have earned in B.Sc Computer Science &Engineering (CSE) at Khulna University of Engineering & Technology(KUET). I am active at problem solving with Python3, Java, C++. And I am learning different Algorithms for problem solve and developing my skills. Recently I am working on Artificial Intelligence(AI)</p>
                                   <ul class="list-unstyled">
                                       <li><i class="fa fa-star-o fa-fw" aria-hidden="true"></i> Working:
                                           <ul>
